--- a/source/index.^.html
+++ b/source/index.^.html
@@ -2,7 +2,7 @@
 #^------------------------------
 #^title trim=ends
 
-This is the title
+Your done itwrong!
 
 #^------------------------------
 #^body trim=ends form=markdown
@@ -10,5 +10,4 @@ This is the title
 Welcome
 -------
 
-Here is a web page rendered from markdown.
-
+Welcome and goodbye.
