--- a/source/index.^.html
+++ b/source/index.^.html
@@ -5,9 +5,9 @@
 Your done itwrong!
 
 #^------------------------------
-#^body trim=ends form=markdown
+#^body trim=ends form=raw
 
-Welcome
+<span class="blink">doing it wrong</span>
 -------
 
-Welcome and goodbye.
+welcome and goodbye.
