--- a/source/index.^.html
+++ b/source/index.^.html
@@ -6,8 +6,19 @@ Your done itwrong!
 
 #^------------------------------
 #^body trim=ends form=raw
-
-<span class="blink">doing it wrong</span>
--------
-
-welcome and goodbye.
+<div class="logo_wrap">
+	<div class="half-circle"></div>
+	<div class="half-circle two"></div>
+	<div class="wrong_white"></div>
+</div>
+<div class="intro">
+	------- <span class="blink">welcome and goodbye</span>
+	<div>------- we would like to invite you</div>
+	<div>------- to a new place</div>
+	<div>------- to experiment</div>
+	<div>------- to make</div>
+	<div>------- to play</div>
+	<div>------- to learn</div>
+	<div>------- and be creative</div>
+	------- <span class="blink">welcome and goodbye</span>
+</div>
