--- a/source/^.html
+++ b/source/^.html
@@ -11,6 +11,7 @@
 #^------------------------------
 #^head trim=ends
 
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Paytone+One" rel="stylesheet">
 <title>{title}</title>
 <style>
 {css}
