updated back image and added mobile browser color

--- a/source/^.html
+++ b/source/^.html
@@ -11,8 +11,9 @@
 #^------------------------------
 #^head trim=ends
 
-<link href="https://fonts.googleapis.com/css?family=Open+Sans|Paytone+One" rel="stylesheet">
 <title>{title}</title>
+<meta name="theme-color" content="#CB6A8D">
+<link href="https://fonts.googleapis.com/css?family=Open+Sans|Paytone+One" rel="stylesheet">
 <style>
 {css}
 </style>
