--- a/source/index.^.html
+++ b/source/index.^.html
@@ -11,11 +11,17 @@ Your done itwrong!
 	<div class="half-circle two"></div>
 	<div class="wrong_white"></div>
 </div>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/5dPvjtpsJSc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/RURojqIObX4?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<div class="media_wrap">
+<a class="event_link" href="https://www.eventbrite.co.uk/e/yorkshire-game-jam-bradford-tickets-56638939593">><img src="data/flyer.png"/></a><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/5dPvjtpsJSc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/RURojqIObX4?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+</div>
+{about}
 
 
-
+#^about
+<div class="spiel_wrap">
+	<p><b>A makerspace in the city of Bradford with a focus on using technology to produce experimental and unconventional projects and art installations.</b></p>
+	<p>The technology industry is alienating to many minorities and marginalised people. We aim to demystify the complexities and elitism of it by sharing experiences and knowledge, and creating an inclusive environment.</p>
+</div>
 
 #^un
 <div class="intro">
