--- a/source/index.^.html
+++ b/source/index.^.html
@@ -12,9 +12,8 @@ Your done itwrong!
 	<div class="wrong_white"></div>
 </div>
 <div class="media_wrap">
-<a class="event_link" href="https://www.eventbrite.co.uk/e/yorkshire-game-jam-bradford-tickets-56638939593">><img src="data/flyer.png"/></a><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/5dPvjtpsJSc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/RURojqIObX4?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+<a class="event_link" href="https://www.eventbrite.co.uk/e/yorkshire-game-jam-bradford-tickets-56638939593"></a><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/5dPvjtpsJSc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/RURojqIObX4?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>{about}
 </div>
-{about}
 
 
 #^about
