eh new site huh

--- a/source/index.^.html
+++ b/source/index.^.html
@@ -6,20 +6,35 @@ Your done itwrong!
 
 #^------------------------------
 #^body trim=ends form=raw
-<div class="logo_wrap">
-	<div class="half-circle"></div>
-	<div class="half-circle two"></div>
-	<div class="wrong_white"></div>
+<div class="sect">
+	<div class="top_wrap">
+		<div class="logo_wrap"><div class="wrong_white"></div></div>{about_1}
+	</div>
+</div>
+<div class="sect witch">
+	<div class="top_wrap">
+		{about_2}
+	</div>
 </div>
 <div class="media_wrap">
-<a class="event_link" href="https://www.eventbrite.co.uk/e/yorkshire-game-jam-bradford-tickets-56638939593"></a><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/5dPvjtpsJSc?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/RURojqIObX4?rel=0&amp;showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>{about}
+<iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/ynzDTgck5RM?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><a class="event_link" href="https://www.eventbrite.co.uk/e/yorkshire-game-jam-bradford-tickets-56638939593"></a><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/wIy8rIMin6U?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><iframe width="auto" height="auto" src="https://www.youtube-nocookie.com/embed/ruZYVibsBGU?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
+{about_3}
 
 
-#^about
+#^about_1
 <div class="spiel_wrap">
 	<p><b>A makerspace in the city of Bradford with a focus on using technology to produce experimental and unconventional projects and art installations.</b></p>
+</div>
+
+#^about_2
+<div class="spiel_wrap two">
 	<p>The technology industry is alienating to many minorities and marginalised people. We aim to demystify the complexities and elitism of it by sharing experiences and knowledge, and creating an inclusive environment.</p>
+</div>
+
+#^about_3
+<div class="foot_wrap">
+	Supported by <a href="https://www.unltd.org.uk/"><img src="data/unltd_100.png"/></a> and <a href="https://www.facebook.com/30chapelstreet/">30 Chapel Street</a>.
 </div>
 
 #^un
