--- a/source/^.html
+++ b/source/^.html
@@ -12,7 +12,7 @@
 #^head trim=ends
 
 <title>{title}</title>
-<meta name="theme-color" content="#CB6A8D">
+<meta name="theme-color" content="#0900ff">
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Paytone+One" rel="stylesheet">
 <style>
 {css}
