--- a/source/index.^.html
+++ b/source/index.^.html
@@ -24,12 +24,13 @@ Your done itwrong!
 
 #^about_1
 <div class="spiel_wrap">
-	<p><b>A makerspace in the city of Bradford with a focus on using technology to produce experimental and unconventional projects and art installations.</b></p>
+	<p><b><span>weirdspace</span> is a makerspace in the city of Bradford with a focus on using technology to produce experimental and unconventional projects and art installations.</b></p>
 </div>
 
 #^about_2
 <div class="spiel_wrap two">
-	<p>The technology industry is alienating to many minorities and marginalised people. We aim to demystify the complexities and elitism of it by sharing experiences and knowledge, and creating an inclusive environment.</p>
+	<p>The technology industry is alienating to many minorities and marginalised people.</p>
+	<div><p>We aim to demystify the complexities and elitism of it by sharing experiences and knowledge within an inclusive environment.</p></div>
 </div>
 
 #^about_3
