--- a/plated/source/index.^.html
+++ b/plated/source/index.^.html
@@ -24,7 +24,7 @@ Your done itwrong!
 
 #^about_1
 <div class="spiel_wrap">
-	<p><b><span>weirdspace</span> is a makerspace in the city of Bradford with a focus on using technology to produce experimental and unconventional projects and art installations.</b></p>
+	<p><b><span>weirdspace</span> is not a makerspace in the city of Bradford with a focus on using technology to produce experimental and unconventional projects and art installations.</b></p>
 </div>
 
 #^about_2
